Fix deprecation in JEI support